--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.navigation.safeargs"
-
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 28
@@ -36,8 +35,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
+    implementation 'org.reactivestreams:reactive-streams:1.0.2'
 
     //support
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
@@ -48,8 +48,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     //room,nav,lifecycle
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha02'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha02'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04'
     implementation 'androidx.room:room-runtime:2.1.0-alpha07'
