--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 'android-Q'
+    buildToolsVersion = '29.0.0 rc3'
     defaultConfig {
         applicationId "altayiskender.movieapp"
         minSdkVersion 21
@@ -30,6 +31,7 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+
 }
 
 dependencies {
@@ -40,20 +42,20 @@ dependencies {
     implementation 'org.reactivestreams:reactive-streams:1.0.2'
 
     //support
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     //room,nav,lifecycle
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha02'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04'
-    implementation 'androidx.room:room-runtime:2.1.0-alpha07'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha07'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha04'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha01'
+    implementation 'androidx.room:room-runtime:2.1.0-beta01'
+    kapt 'androidx.room:room-compiler:2.1.0-beta01'
     implementation 'androidx.room:room-coroutines:2.1.0-alpha04'
 
     //other
@@ -76,8 +78,8 @@ dependencies {
 
     //testing
     testImplementation 'junit:junit:4.13-beta-2'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha05'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.31'
 
 }
