--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,18 +5,22 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
-    compileSdkVersion 'android-Q'
-    buildToolsVersion = '29.0.0 rc3'
+    compileSdkVersion 29
+    buildToolsVersion = '29.0.0'
     defaultConfig {
         applicationId "altayiskender.movieapp"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -42,24 +46,25 @@ dependencies {
     implementation 'org.reactivestreams:reactive-streams:1.0.2'
 
     //support
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'com.google.android.material:material:1.1.0-alpha08'
 
     //room,nav,lifecycle
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha04'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha01'
-    implementation 'androidx.room:room-runtime:2.1.0-beta01'
-    kapt 'androidx.room:room-compiler:2.1.0-beta01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-beta01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha02'
+    implementation 'androidx.room:room-runtime:2.1.0'
+    kapt 'androidx.room:room-compiler:2.1.0'
     implementation 'androidx.room:room-coroutines:2.1.0-alpha04'
 
     //other
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'me.jfenn:Attribouter:0.1.5'
 
     // dagger
@@ -70,16 +75,16 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     // retrofit
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     //testing
-    testImplementation 'junit:junit:4.13-beta-2'
-    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.31'
+    testImplementation 'junit:junit:4.13-beta-3'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.41'
 
 }
