--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,19 @@ android {
     compileSdkVersion 29
     buildToolsVersion = '29.0.0'
     defaultConfig {
-        applicationId "altayiskender.movieapp"
+        applicationId "com.altayiskender.movieapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        "room.incremental": "true",
+                ]
+            }
+        }
     }
     buildTypes {
         release {
@@ -22,7 +29,6 @@ android {
         }
         debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     buildTypes.each {
@@ -35,6 +41,12 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+    androidExtensions {
+        experimental = true
+    }
 
 }
 
@@ -43,42 +55,37 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
-    implementation 'org.reactivestreams:reactive-streams:1.0.2'
+    implementation 'org.reactivestreams:reactive-streams:1.0.3'
 
     //support
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
-    implementation 'androidx.fragment:fragment:1.2.0-alpha01'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha01'
-    implementation 'androidx.fragment:fragment-testing:1.2.0-alpha01'
 
     //room,nav,lifecycle
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-beta01'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-beta01'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha02'
-    implementation 'androidx.room:room-runtime:2.2.0-alpha01'
-    kapt 'androidx.room:room-compiler:2.2.0-alpha01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha01'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha03'
+    implementation 'androidx.room:room-runtime:2.2.0-beta01'
+    kapt 'androidx.room:room-compiler:2.2.0-beta01'
     implementation 'androidx.room:room-coroutines:2.1.0-alpha04'
 
     //other
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation 'me.jfenn:Attribouter:0.1.5'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
-    // dagger
-    implementation "com.google.dagger:dagger:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    //Kodein
+    implementation 'org.kodein.di:kodein-di-generic-jvm:6.3.3'
+    implementation 'org.kodein.di:kodein-di-framework-android-x:6.3.3'
 
     // retrofit
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.1.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
@@ -88,10 +95,14 @@ dependencies {
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.41'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.50'
 
     //log+leak
     implementation 'com.jakewharton.timber:timber:4.7.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-alpha-3'
 
+    //ETC
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+    implementation 'me.jfenn:Attribouter:0.1.5'
 }
