--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
-    ext.dagger_version = '2.23.2'
-    ext.retrofit_version = '2.6.0'
+    ext.kotlin_version = '1.3.50'
+    ext.dagger_version = '2.24'
+    ext.retrofit_version = '2.6.1'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-beta01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-alpha01"
 
 
         // NOTE: Do not place your application dependencies here; they belong
