--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@ android.enableR8=true
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 kapt.incremental.apt=true
+android.databinding.incremental=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
