--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,13 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.dagger_version = '2.24'
-    ext.retrofit_version = '2.6.1'
+    ext.retrofit_version = '2.6.2'
+    ext.navigation_version = '2.2.0-alpha03'
+    ext.glide_version = '4.10.0'
+    ext.coroutines_version = '1.3.0'
+    ext.lifecycle_version = '2.2.0-alpha05'
+    ext.room_version = '2.2.0-rc01'
+    ext.kodein_version = '6.3.3'
 
     repositories {
         google()
@@ -12,7 +18,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-alpha01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
