--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ android {
         experimental = true
     }
 
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding = true
     }
 
 }
@@ -78,11 +78,11 @@ dependencies {
     implementation 'org.reactivestreams:reactive-streams:1.0.3'
 
     //support
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'com.google.android.material:material:1.2.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
@@ -102,12 +102,15 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    //Kodein
-    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
-    implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
+    //Dagger
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
 
     // retrofit
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
@@ -115,9 +118,9 @@ dependencies {
 
     //testing
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha04'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.61'
+    androidTestImplementation 'androidx.test:runner:1.3.0-rc01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc01'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.72'
 
     //log+leak canary
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -125,6 +128,6 @@ dependencies {
 
     //ETC
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.2'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
     implementation 'me.jfenn:Attribouter:0.1.5'
 }
