--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
-    ext.retrofit_version = '2.7.1'
-    ext.navigation_version = '2.3.0-alpha02'
+    ext.kotlin_version = '1.3.72'
+    ext.retrofit_version = '2.9.0'
+    ext.navigation_version = '2.3.0-beta01'
     ext.glide_version = '4.11.0'
     ext.coroutines_version = '1.3.0'
     ext.lifecycle_version = '2.2.0'
-    ext.room_version = '2.2.4'
-    ext.kodein_version = '6.3.3'
+    ext.room_version = '2.2.5'
+    ext.dagger_version = '2.28'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
