--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,10 @@
 .gradle
 /local.properties
 /key.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-/.idea/sonarlint/
+/.idea
+*/build
+*/release
