--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ android.enableJetifier=true
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 kapt.incremental.apt=true
-android.databinding.incremental=true
+org.gradle.parallel=true
+org.gradle.caching=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
